feat: team stats
